# py_testing

./: .buildinfo  .gitignore  Makefile  README.md  dev-requirements.txt  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  py_testing.html  pyproject.toml  search.html  searchindex.js  setup.py  tox.ini
.doctrees/: environment.pickle  index.doctree  modules.doctree  py_testing.doctree
.github/workflows/: docs.yml
_modules/: index.html
_modules/py_testing/: func.html
_sources/: index.rst.txt
docs/: conf.py  index.rst  modules.rst  py_testing.rst
py_testing/: func.py
tests/pytest/: test_func.py
tests/unittest/: test_func.py
