[tool.poetry]
name = "py_testing"
version = "0.1.0"
description = ""
authors = ["Dillon Stadther <dlstadther@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pylint = "^2.15.3"
pytest = "^7.1.3"
tox = "^3.26.0"
nose2 = "^0.12.0"
mypy = "^0.982"
flake8 = "^5.0.4"
coverage = "^6.5.0"
Sphinx = "^5.2.3"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
